@@ -10,7 +10,6 @@
  */
 //=============================================================================
 
-
 #ifndef ACE_FILE_ADDR_H
 #define ACE_FILE_ADDR_H
 #include /**/ "ace/pre.h"
